syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/paskills/dialogovo/test_protos";
option java_package = "ru.yandex.alice.paskills.dialogovo.test.proto";
option java_outer_classname = "InvalidRequestProto";


message TInvalidRequestProto {
    string BaseRequest = 1 [json_name = "base_request"];
}
